# wiig

./: .editorconfig  .gitignore  CLAUDE.md  LICENSE.md  README.md  meson.build  meson.options  uncrustify.cfg
.github/workflows/: ci-main.yml  ci-pr.yml
cli/: main.c  meson.build
tests/: meson.build  test_lexer.c  test_skeleton.c
tests/fixtures/: access_control.dl  edge.dl
wiig/: meson.build  wg-version.c  wiig-export.h  wiig-internal.h  wiig-types.h  wiig.h
wiig/lexer/: lexer.c  lexer.h  meson.build  token_kind.h
